# TDS-Project-1

./: .gitignore  GandmeDaalo.txt  README.md  errorhandling.txt  evaluate.py  requirements.txt  working.txt
app/: check.py  eval.py  evaluate.py  funtion_tasks.py  generate_schema.py  main.py  task.py  task_to_embed.txt
app/data/: comments-similar.txt  comments.txt  contacts-sorted.json  contacts.json  credit-card.txt  dates.txt  email-sender.txt  email.txt  format.md  logs-recent.txt  ticket-sales-gold.txt  ticket-sales.db
app/data/docs/: index.json
app/data/docs/building/: garden.md  growth.md  gun.md  high.md  including.md  main.md  pass.md  person.md  road.md  wrong.md
app/data/docs/center/: age.md  choose.md  doctor.md  every.md  key.md  maintain.md  mother.md  part.md  political.md  type.md
app/data/docs/child/: common.md  decide.md  drop.md  forget.md  gas.md  ground.md  lot.md  play.md  take.md  that.md
app/data/docs/describe/: customer.md  dark.md  grow.md  important.md  interest.md  item.md  offer.md  pick.md  piece.md  pretty.md  process.md  receive.md  skill.md  themselves.md  there.md  trouble.md  type.md  wait.md  whatever.md  whom.md
app/data/docs/drop/: apply.md  big.md  edge.md  finally.md  himself.md  human.md  issue.md  pull.md  simple.md  (+1 more)
project_1___llm_based_automation_agent/: README.md  pyproject.toml  report.md
project_1___llm_based_automation_agent/src/project_1___llm_based_automation_agent/: crew.py  main.py
project_1___llm_based_automation_agent/src/project_1___llm_based_automation_agent/config/: agents.yaml  tasks.yaml
(+140 files in other folders)
