[project]
name = "project_1___llm_based_automation_agent"
version = "0.1.0"
description = "Project 1 - LLM-based Automation Agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
    "fastapi[standard]>=0.115.7",
]

[project.scripts]
project_1___llm_based_automation_agent = "project_1___llm_based_automation_agent.main:run"
run_crew = "project_1___llm_based_automation_agent.main:run"
train = "project_1___llm_based_automation_agent.main:train"
replay = "project_1___llm_based_automation_agent.main:replay"
test = "project_1___llm_based_automation_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
